--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@svgr/webpack": "^8.0.1",
+    "animate.css": "^4.1.1",
     "autoprefixer": "10.4.14",
     "nanoid": "^4.0.2",
     "next": "13.4.10",
@@ -18,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-intersection-observer": "^9.5.2",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "tailwindcss": "3.3.3"
